--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- nav begins -->
      <div class="na">
     <nav class="navigation">
-        <a class="logo logoimg" href="/index.html"><img src="/public/logo/logo2.jpeg" alt=""></a>
+        <a class="logo logoimg" href="/index.html"><img src="./public/logo/logo2.jpeg" alt=""></a>
         <div class="navlist">
             <!-- <div class="navlinks"> -->
                 <a href="/product.html">Products</a>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="herovideo">
                     <div class="floating-image-container">
-                        <img src="/public/images/hero2.png" class="floating-image" alt="Floating Image">
+                        <img src="./public/images/hero2.png" class="floating-image" alt="Floating Image">
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
             <div class="aboutcontentandvideo1">
                 <div class="about1video">
                     <div class="floating-image-container code3img">
-                        <img src="/public/images/code2.png" class="floating-image" alt="Floating Image">
+                        <img src="./public/images/code2.png" class="floating-image" alt="Floating Image">
                     </div>
                 </div>
                 <div class="aboutcontent">
@@ -143,7 +143,7 @@
                 </div>
                 <div class="about1video">
                     <div class="floating-image-container code3img">
-                        <img src="/public/images/code3.png" class="floating-image" alt="Floating Image">
+                        <img src="./public/images/code3.png" class="floating-image" alt="Floating Image">
                     </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
             <div class="aboutcontentandvideo1">
                 <div class="about1video">
                     <div class="floating-image-container code3img">
-                        <img src="/public/images/code4.png" class="floating-image" alt="Floating Image">
+                        <img src="./public/images/code4.png" class="floating-image" alt="Floating Image">
                     </div>
                 </div>
                 <div class="aboutcontent">
@@ -196,7 +196,7 @@
             <div class="aboutcontentandimg1">
                 <div class="about1video code1img">
                     <div class="floating-image-container code3img">
-                        <img src="/public/images/code5.png" class="floating-image" alt="Floating Image">
+                        <img src="./public/images/code5.png" class="floating-image" alt="Floating Image">
                     </div>
                 </div>
             </div>
@@ -283,7 +283,7 @@
 
         <div class="footer-bottom">
             <div class="footer-logo">
-                <img src="/public/logo/logofinal.png" alt="Footer Logo">
+                <img src="./public/logo/logofinal.png" alt="Footer Logo">
             </div>
             <div class="footer-links">
                 <a href="#">Terms of Service</a>
