--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
         <!-- nav begins -->
         <div class="na">
             <nav class="navigation">
-                <a class="logo logoimg" href="/index.html"><img src="/public/logo/logo2.jpeg" alt=""></a>
+                <a class="logo logoimg" href="/index.html"><img src="./public/logo/logo2.jpeg" alt=""></a>
                 <div class="navlist">
                     <!-- <div class="navlinks"> -->
                         <a href="/product.html">Products</a>
@@ -182,7 +182,7 @@
 
         <div class="footer-bottom">
             <div class="footer-logo">
-                <img src="/public/logo/logofinal.png" alt="Footer Logo">
+                <img src="./public/logo/logofinal.png" alt="Footer Logo">
             </div>
             <div class="footer-links">
                 <a href="#">Terms of Service</a>
