--- a/product.html
+++ b/product.html
@@ -19,14 +19,14 @@
                 <a class="logo logoimg" href="/index.html"><img src="./public/logo/logo2.jpeg" alt=""></a>
                 <div class="navlist">
                     <!-- <div class="navlinks"> -->
-                        <a href="/product.html">Products</a>
+                        <a href="./product.html">Products</a>
                         <a href="">Customers</a>
                         <a href="">Blog</a>
                         <a href="">Help</a>
                     <!-- </div> -->
                     <div class="navbtn">
                         <button id="navlogin">Login</button>
-                        <button id="navget" onclick="window.location.href='/getstarted.html'">Get Started</button>
+                        <button id="navget" onclick="window.location.href='./getstarted.html'">Get Started</button>
                     </div>
                 </div>
                 <!-- Mobile Menu Icon -->
@@ -34,7 +34,7 @@
             </nav>
             <div class="navi">
                 <div class="closebtn"><i class="fa-solid fa-xmark"></i></div>
-                <a href="/product.html">Products</a>
+                <a href="./product.html">Products</a>
                 <div class="navi-border"></div>
                 <a href="">Customers</a>
                 <div class="navi-border"></div>
@@ -44,9 +44,9 @@
                 <div class="navi-border"></div>
                 <a href="">Pricing</a>
                 <div class="navi-border"></div>
-                <a href="/login.html">Login</a>
+                <a href="./login.html">Login</a>
                 <div class="navi-border"></div>
-                <a href="/getstarted.html">Get Started</a>
+                <a href="./getstarted.html">Get Started</a>
             </div>
         </div>
         <!-- nav ends -->
