--- a/getstarted.html
+++ b/getstarted.html
@@ -15,17 +15,17 @@
         <!-- nav begins -->
         <div class="na">
             <nav class="navigation">
-                <a class="logo logoimg" href="/index.html"><img src="/public/logo/logo2.jpeg" alt=""></a>
+                <a class="logo logoimg" href="/index.html"><img src="./public/logo/logo2.jpeg" alt=""></a>
                 <div class="navlist">
                     <!-- <div class="navlinks"> -->
-                        <a href="/product.html">Products</a>
+                        <a href="./product.html">Products</a>
                         <a href="">Customers</a>
                         <a href="">Blog</a>
                         <a href="">Help</a>
                     <!-- </div> -->
                     <div class="navbtn">
                         <button id="navlogin">Login</button>
-                        <button id="navget" onclick="window.location.href='/getstarted.html'">Get Started</button>
+                        <button id="navget" onclick="window.location.href='./getstarted.html'">Get Started</button>
                     </div>
                 </div>
                 <!-- Mobile Menu Icon -->
@@ -33,7 +33,7 @@
             </nav>
             <div class="navi">
                 <div class="closebtn"><i class="fa-solid fa-xmark"></i></div>
-                <a href="/product.html">Products</a>
+                <a href="./product.html">Products</a>
                 <div class="navi-border"></div>
                 <a href="">Customers</a>
                 <div class="navi-border"></div>
@@ -43,9 +43,9 @@
                 <div class="navi-border"></div>
                 <a href="">Pricing</a>
                 <div class="navi-border"></div>
-                <a href="/login.html">Login</a>
+                <a href="./login.html">Login</a>
                 <div class="navi-border"></div>
-                <a href="/getstarted.html">Get Started</a>
+                <a href="./getstarted.html">Get Started</a>
             </div>
         </div>
         <!-- nav ends -->
@@ -100,9 +100,6 @@
 
     <footer>
         <div class="footer-top">
-            <!-- <div class="logo">
-                <img src="logo.png" alt="Company Logo">
-            </div> -->
             <div class="footer-columns">
                 <div class="column">
                     <h3>PRODUCT</h3>
@@ -150,7 +147,7 @@
 
         <div class="footer-bottom">
             <div class="footer-logo">
-                <img src="/public/logo/logofinal.png" alt="Footer Logo">
+                <img src="./public/logo/logofinal.png" alt="Footer Logo">
             </div>
             <div class="footer-links">
                 <a href="#">Terms of Service</a>
