--- a/getstarted.html
+++ b/getstarted.html
@@ -12,41 +12,41 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-        <!-- nav begins -->
-        <div class="na">
-            <nav class="navigation">
-                <a class="logo logoimg" href="/index.html"><img src="./public/logo/logo2.jpeg" alt=""></a>
-                <div class="navlist">
-                    <!-- <div class="navlinks"> -->
-                        <a href="./product.html">Products</a>
-                        <a href="">Customers</a>
-                        <a href="">Blog</a>
-                        <a href="">Help</a>
-                    <!-- </div> -->
-                    <div class="navbtn">
-                        <button id="navlogin">Login</button>
-                        <button id="navget" onclick="window.location.href='./getstarted.html'">Get Started</button>
-                    </div>
+    <!-- nav begins -->
+    <div class="na">
+        <nav class="navigation">
+            <a class="logo logoimg" href="/"><img src="./public/logo/logo2.jpeg" alt=""></a>
+            <div class="navlist">
+                <!-- <div class="navlinks"> -->
+                    <a href="./product.html">Products</a>
+                    <a href="./integration.html">Integrations</a>
+                    <a href="">Blog</a>
+                    <a href="">Help</a>
+                <!-- </div> -->
+                <div class="navbtn">
+                    <button id="navlogin">Login</button>
+                    <button id="navget" onclick="window.location.href='./getstarted.html'">Get Started</button>
                 </div>
-                <!-- Mobile Menu Icon -->
-                <div class="menu-toggle" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></div>
-            </nav>
-            <div class="navi">
-                <div class="closebtn"><i class="fa-solid fa-xmark"></i></div>
-                <a href="./product.html">Products</a>
-                <div class="navi-border"></div>
-                <a href="">Customers</a>
-                <div class="navi-border"></div>
-                <a href="">Blog</a>
-                <div class="navi-border"></div>
-                <a href="">Help</a>
-                <div class="navi-border"></div>
-                <a href="">Pricing</a>
-                <div class="navi-border"></div>
-                <a href="./login.html">Login</a>
-                <div class="navi-border"></div>
-                <a href="./getstarted.html">Get Started</a>
             </div>
+            <!-- Mobile Menu Icon -->
+            <div class="menu-toggle" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></div>
+        </nav>
+        <div class="navi">
+            <div class="closebtn"><i class="fa-solid fa-xmark"></i></div>
+            <a href="./product.html">Products</a>
+            <div class="navi-border"></div>
+            <a href="">Customers</a>
+            <div class="navi-border"></div>
+            <a href="">Blog</a>
+            <div class="navi-border"></div>
+            <a href="">Help</a>
+            <div class="navi-border"></div>
+            <a href="">Pricing</a>
+            <div class="navi-border"></div>
+            <a href="./login.html">Login</a>
+            <div class="navi-border"></div>
+            <a href="./getstarted.html">Get Started</a>
+        </div>
         </div>
         <!-- nav ends -->
 
