--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- nav begins -->
      <div class="na">
     <nav class="navigation">
-        <a class="logo logoimg" href="/"><img src="./public/logo/logo2.jpeg" alt=""></a>
+        <a class="logo logoimg" href="./index.html"><img src="./public/logo/logo2.jpeg" alt=""></a>
         <div class="navlist">
             <!-- <div class="navlinks"> -->
                 <a href="./product.html">Products</a>
